test/fail/template-page-clash.app
//#2 Multiple page/template definitions with name 'theName'
application test

define page root() { }

define page theName() {
  
}

define template theName() {
  
}

